<resources>
    <string name="app_name">MyDistributor</string>
    <string name="loginLabel">Login</string>
    <string name="passwordLabel">Password</string>
    <string name="emailLabel">Email</string>
    <string name="search_articles">Search articles</string>
    <string name="review_order">Review Order</string>
    <string name="user_name">User Name</string>
    <string name="my_orders">My Orders</string>
    <string name="my_deliveries">My Deliveries</string>
    <string name="my_pro_formas">My Pro Formas</string>
    <string name="app_settings">App Settings</string>
    <string name="logout">Logout</string>
    <string name="current_orders">Current Orders</string>
    <string name="current_deliveries">Current Deliveries</string>
    <string name="current_pro_formas">Current Pro Formas</string>
    <string name="order_no">Order #</string>
    <string name="order_summary_details_here">Order summary details here</string>
    <string name="delivery_no">Delivery #</string>
    <string name="delivery_summary_details_here">Delivery summary details here</string>
    <string name="pro_forma_no">Pro Forma #</string>
    <string name="pro_forma_summary_details_here">Pro Forma summary details here.</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="add_to_order">Add to Order</string>
    <string name="edit_order">Edit Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="complete_order">Complete Order</string>
    <string name="article_name">Article Name</string>
    <string name="zero_dollars">$0.00</string>
    <string name="zero_quantity">Qty: 0</string>
    <string name="pro_forma">Pro Forma</string>
    <string name="cash">Cash</string>
    <string name="edit_item">Edit item</string>
    <string name="delete_item">Delete Item</string>
    <string name="order_summary">Order Summary</string>
    <string name="total_sum">Total: $0.00</string>
    <string name="order_details">Order Details</string>
    <string name="order_id">Order ID:</string>
    <string name="comment">Comment:</string>
    <string name="order_status">Order Status:</string>
    <string name="payment_date">Payment Date:</string>
    <string name="order_sum">Order Sum:</string>
    <string name="order_date">Order Date:</string>
    <string name="delivery">Delivery:</string>
    <string name="generate_pro_forma">Generate Pro Forma</string>
    <string name="manufacturer_name">Manufacturer Name</string>
    <string name="delivery_date">Delivery Date:</string>
    <string name="status">Status:</string>
    <string name="route_info">Route Info</string>
    <string name="assigned_deliveries">Assigned Deliveries</string>
    <string name="dashboard">Dashboard</string>
    <string name="create_order">Create Order</string>
    <string name="profile">Profile</string>
    <string name="start_a_delivery">Delivery</string>
    <string name="start_km">Start KM:</string>
    <string name="enter_starting_km">Enter starting KM</string>
    <string name="start_delivery">Start Delivery</string>
    <string name="past_deliveries">Past Deliveries</string>
    <string name="create_delivery">Create Delivery</string>
    <string name="warehouse_statistics">Warehouse Statistics</string>
    <string name="new_orders">New Orders</string>
    <string name="pending_deliveries">Pending Deliveries</string>
    <string name="profile_image">Profile Image</string>
</resources>