<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragments.customer.CustomerProfileFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/profileName"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name" />

        <Button
            android:id="@+id/ordersButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_orders"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/deliveriesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_deliveries"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/proFormasButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_pro_formas"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_settings"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</ScrollView>
