<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/articleNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/article_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/articleManufacturerNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manufacturer_name"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/articleQuantityTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero_quantity" />

        <TextView
            android:id="@+id/unitPriceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero_dollars" />
    </LinearLayout>

    <!-- Total Price -->
    <TextView
        android:id="@+id/totalPriceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="end"
        android:text="@string/total_sum"
        android:textStyle="bold" />
</LinearLayout>
